# discord-tldr

./: .env  README.md  pyproject.toml
.github/workflows/: deploy-to-ec2.yml
discord_tldr/: __init__.py  __main__.py  authentication.py  metrics.py  summarize.py
discord_tldr/database/: __init__.py  classes.py
docker/: Dockerfile
